--- a/WebShopFrontend/Components/_Imports.razor
+++ b/WebShopFrontend/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using WebShopFrontend
 @using WebShopFrontend.Components
+@using WebShopFrontend.Components.ProductComponents
