--- a/WebShopFrontend/Components/Layout/NavMenu.razor
+++ b/WebShopFrontend/Components/Layout/NavMenu.razor
@@ -7,6 +7,9 @@
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                     <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
                 </NavLink>
+                <NavLink class="nav-link" href="products">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Products
+                </NavLink>
                 <NavLink class="nav-link" href="contact">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Contact
                 </NavLink>
