--- a/WebShopFrontend/wwwroot/app.css
+++ b/WebShopFrontend/wwwroot/app.css
@@ -1,7 +1,19 @@
-﻿body {
-    background-color: red;
+﻿.product-container {
+    text-align: center;
 }
 
-.page {
-    background-color: white;
+.product-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 0;
+    margin: 0;
 }
+
+ .product-list > div {
+     background-color: #f5f5f5;
+     padding: 10px;
+     border-radius: 8px;
+     text-align: center;
+     box-sizing: border-box;
+ }
