--- a/WebShopFrontend/wwwroot/app.css
+++ b/WebShopFrontend/wwwroot/app.css
@@ -1,19 +1,1 @@
-﻿.product-container {
-    text-align: center;
-}
-
-.product-list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    padding: 0;
-    margin: 0;
-}
-
- .product-list > div {
-     background-color: #f5f5f5;
-     padding: 10px;
-     border-radius: 8px;
-     text-align: center;
-     box-sizing: border-box;
- }
+﻿
