--- a/WebShopFrontend/Components/Pages/Products.razor.css
+++ b/WebShopFrontend/Components/Pages/Products.razor.css
@@ -1,17 +1,19 @@
 ﻿.product-container {
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 .products-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    gap: 25px;
     padding: 0;
     margin: 0;
 }
 
 .product-item {
+    width:100%;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,10 +24,12 @@
     box-sizing: border-box;
     text-align: center;
     transition: transform 0.3s ease;
+    margin: 0 auto;
 }
 
     .product-item:hover {
         transform: scale(1.05);
+        cursor: pointer;
     }
 
     .product-item img {
