done wtih the register endpoint

--- a/WebShopFrontend/Components/Pages/ProductPage.razor
+++ b/WebShopFrontend/Components/Pages/ProductPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/products/{Id:int}"
-@using WebShopShared.Interfaces
+@using WebShopFrontend.Interfaces
 @using WebShopShared.Models
 @using WebShopFrontend.Components.ProductComponents
 
