--- a/WebShopFrontend/Components/Pages/Products.razor
+++ b/WebShopFrontend/Components/Pages/Products.razor
@@ -1,6 +1,6 @@
 ﻿@page "/products"
 @rendermode InteractiveServer
-@using WebShopShared.Interfaces
+@using WebShopFrontend.Interfaces
 @using WebShopShared.Models
 @using WebShopFrontend.Components.ProductComponents
 
