--- a/WebShopFrontend/Components/Layout/NavMenu.razor
+++ b/WebShopFrontend/Components/Layout/NavMenu.razor
@@ -16,6 +16,9 @@
                 <NavLink class="nav-link" href="userlogin">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
                 </NavLink>
+                <NavLink class="nav-link" href="register">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Register
+                </NavLink>
             </nav>
         </div>
     </div>
