--- a/WebShopFrontend/Components/Layout/NavMenu.razor
+++ b/WebShopFrontend/Components/Layout/NavMenu.razor
@@ -13,7 +13,7 @@
                 <NavLink class="nav-link" href="contact">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Contact
                 </NavLink>
-                <NavLink class="nav-link" href="userlogin">
+                <NavLink class="nav-link" href="login">
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Login
                 </NavLink>
                 <NavLink class="nav-link" href="register">
