--- a/WebShopFrontend/Components/Pages/Register.razor
+++ b/WebShopFrontend/Components/Pages/Register.razor
@@ -3,12 +3,14 @@
 @using System.Text.Json
 @using WebShopFrontend.Interfaces
 @using Models
-@using System.Text
 
-@if (!_isLoggedIn)
+@if (!_isSuccess)
 {
 	<div class="container">
 		<form @onsubmit="RegisterSubmit">
+			<label for="username">Username</label>
+			<input type="username" @bind="_username" />
+
 			<label for="email">Email</label>
 			<input type="email" @bind="_email" />
 
@@ -27,7 +29,7 @@
 }
 else
 {
-	<p>You are already logged in</p>
+	<p>You are now registred and can login!</p>
 }
 
 
@@ -36,10 +38,11 @@ else
 	[Inject]
 	private IUserService? _userService { get; set;}
 
-	private string _errorMessage;
+	private string _username = string.Empty;
+	private string _errorMessage = string.Empty;
 	private string _email = string.Empty;
 	private string _password = string.Empty;
-	private bool _isLoggedIn = false;
+	private bool _isSuccess = false;
 
 	public async Task RegisterSubmit()
 	{
@@ -48,22 +51,27 @@ else
 			throw new InvalidOperationException("Userservice is not available");
 		}
 
-		UserDto user = new UserDto
+		RegisterDto user = new RegisterDto
 		{
+			Username = _username,
 			Email = _email,
 			Password = _password
 		};
+
 		try
 		{
-			await _userService.RegisterUser(user);
-		}
-		catch (HttpRequestException ex)
-		{
-			_errorMessage = ex.Message;
+			var response = await _userService.RegisterUser(user);
+			_isSuccess = response;
+
+			if(!_isSuccess)
+			{
+				_errorMessage = "Registrering misslyckades, kontrollera din information!";
+			}
+
 		}
 		catch (Exception ex)
 		{
-			_errorMessage = "Något fel har inträffat, vänligen försök igen";
+			_errorMessage = $"Något fel har inträffat, vänligen försök igen: {ex.Message}";
 		}
 
 	} 
