--- a/WebShopFrontend/Components/_Imports.razor
+++ b/WebShopFrontend/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using WebShopFrontend
 @using WebShopFrontend.Components
 @using WebShopFrontend.Components.ProductComponents
+@using Microsoft.AspNetCore.Components.Authorization;
