worked on the back- and frontend orderservice. Crated the button and tried it.

--- a/WebShopFrontend/Components/Pages/ProductPage.razor
+++ b/WebShopFrontend/Components/Pages/ProductPage.razor
@@ -2,6 +2,7 @@
 @using WebShopFrontend.Interfaces
 @using WebShopShared.Models
 @using WebShopFrontend.Components.ProductComponents
+@using WebShopFrontend.Components
 
 
 <div class="product-container">
