--- a/WebShopFrontend/Components/ProductComponents/LoadSingleProduct.razor
+++ b/WebShopFrontend/Components/ProductComponents/LoadSingleProduct.razor
@@ -6,7 +6,7 @@
     public T? Item { get; set; }
 
     [Parameter]
-    public RenderFragment<T> ItemTemplate { get; set; }
+    public RenderFragment<T> ItemTemplate { get; set; } = null!;
 
 }
 
